--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'none'">
   <title>App</title>
+  <link rel="stylesheet" href="src/app.scss"/>
 </head>
 <body>
   <h1>Hello World</h1>
+  <button class="btn--ok">OK</button>
+  <button class="btn--cancel">Cancel</button>
+  <script src="src/app.ts"></script>
 </body>
 </html>
